--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3"
   },
   "devDependencies": {
-    "prettier": "1.14.3"
+    "prettier": "1.14.3",
+    "typescript": "3.0.3"
   }
 }
