--- a/api/package.json
+++ b/api/package.json
@@ -4,17 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/typescript/bin/tsc && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier-check": "./node_modules/prettier/bin-prettier.js prettier --list-different **/*.js",
-    "prettier-fix": "./node_modules/prettier/bin-prettier.js prettier --write **/*.js"
+    "prettier-fix": "./node_modules/prettier/bin-prettier.js prettier --write '**/*.ts'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "6.5.3",
     "config": "^2.0.1",
-    "express": "^4.16.3"
+    "cors": "2.8.4",
+    "express": "^4.16.3",
+    "mongodb": "3.1.3"
   },
   "devDependencies": {
+    "@types/config": "0.0.34",
+    "@types/cors": "2.8.4",
+    "@types/express": "4.16.0",
+    "@types/mongodb": "3.1.9",
+    "@types/node": "10.10.1",
     "prettier": "1.14.3",
     "typescript": "3.0.3"
   }
