--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "./node_modules/typescript/bin/tsc && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "db-init": "node scripts/index-init.js",
     "prettier-check": "./node_modules/prettier/bin-prettier.js prettier --list-different **/*.js",
     "prettier-fix": "./node_modules/prettier/bin-prettier.js prettier --write '**/*.ts'"
   },
@@ -15,7 +16,9 @@
     "ajv": "6.5.3",
     "config": "^2.0.1",
     "cors": "2.8.4",
+    "dot-prop": "4.2.0",
     "express": "^4.16.3",
+    "faker": "4.1.0",
     "mongodb": "3.1.3"
   },
   "devDependencies": {
