--- a/api/package.json
+++ b/api/package.json
@@ -16,17 +16,17 @@
     "ajv": "6.5.3",
     "config": "^2.0.1",
     "cors": "2.8.4",
-    "dot-prop": "4.2.0",
     "express": "^4.16.3",
-    "faker": "4.1.0",
     "mongodb": "3.1.3"
   },
   "devDependencies": {
+    "@turf/turf": "5.1.6",
     "@types/config": "0.0.34",
     "@types/cors": "2.8.4",
     "@types/express": "4.16.0",
     "@types/mongodb": "3.1.9",
     "@types/node": "10.10.1",
+    "faker": "4.1.0",
     "prettier": "1.14.3",
     "typescript": "3.0.3"
   }
